--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "node --experimental-vm-modules ./node_modules/.bin/jest --detectOpenHandles --verbose"
+    "test": "jest --detectOpenHandles --verbose"
   },
   "jest": {
     "testMatch": [
@@ -39,5 +39,8 @@
     "puppeteer-proxy": "^1.0.3",
     "puppeteer-real-browser": "^1.3.16",
     "supertest": "^7.0.0"
+  },
+  "overrides": {
+    "rebrowser-puppeteer-core": "23.6.100"
   }
 }
