--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "app-root-path": "^3.1.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -38,6 +39,8 @@
     "puppeteer-intercept-and-modify-requests": "^1.3.1",
     "puppeteer-proxy": "^1.0.3",
     "puppeteer-real-browser": "^1.3.17",
-    "supertest": "^7.0.0"
+    "rebrowser-puppeteer": "^23.6.101",
+    "supertest": "^7.0.0",
+    "tree-kill": "^1.2.2"
   }
 }
